@@ -16,6 +16,10 @@ multi-signature generation
 05. dknewkey.sh: removed newlines from public key records
 06. dknewkey.sh: added -e, --enforce option to disable testing mode for dkim
     key
+- 07/02/2022
+07. qmail-qread.c: BUG: Fixed SIGSEGV
+08. qmail-qread.c: skip dynamic queue if DYNAMIC_QUEUE is not set
+
 
 * Mon Jan 30 2023 13:14:56 +0000 Manvendra Bhangui <indimail-mta@indimail.org> 3.0.2-1.1%{?dist}
 Release 3.0.2-1.1 Start 08/09/2022 End 30/11/2023
